Add seller directory to explorer
